# comfyui-gmammolo

./: CompfyuiGmammolo.py  README.md  __init__.py  deprecated_nodes.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: FilterConditioningPrompt.py  FilterTextPrompt.py  Textbox.py
